// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetPageChangedView renders with subtitle=test subtitle content and feature flag= false 1`] = `
<div
  className="staticContentInDetailsView"
>
  <h1>
    test title
  </h1>
  <div
    className="targetPageChangedSubtitle"
  >
    test subtitle content
  </div>
  <p>
    <React.Fragment>
      The target page has changed. Use the 
      <InlineStartOverButton
        detailsViewActionMessageCreator={Object {}}
        selectedTest={2}
      />
       button to scan the new target page.
    </React.Fragment>
  </p>
</div>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= false 1`] = `
<div
  className="staticContentInDetailsView"
>
  <h1>
    test title
  </h1>
  <div
    className="targetPageChangedSubtitle"
  />
  <p>
    <React.Fragment>
      The target page has changed. Use the 
      <InlineStartOverButton
        detailsViewActionMessageCreator={Object {}}
        selectedTest={2}
      />
       button to scan the new target page.
    </React.Fragment>
  </p>
</div>
`;

exports[`TargetPageChangedView renders with subtitle=undefined and feature flag= true 1`] = `
<div
  className="staticContentInDetailsView"
>
  <h1>
    test title
  </h1>
  <div
    className="targetPageChangedSubtitle"
  />
  <p>
    <React.Fragment>
      The target page has changed. Use the 
      <InlineStartOverButton
        detailsViewActionMessageCreator={Object {}}
        selectedTest={2}
      />
       button to scan the new target page.
    </React.Fragment>
  </p>
</div>
`;
